--- a/pgob.html
+++ b/pgob.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Loja Wohtech</title>
+  <title>Loja Dgold</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -228,3 +228,4 @@ src="https://www.facebook.com/tr?id=1656747348330083&ev=PageView&noscript=1"
   </script>
 </body>
 </html>
+
